--- a/.github/workflows/test_code_updated_requirements.yml
+++ b/.github/workflows/test_code_updated_requirements.yml
@@ -28,11 +28,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pur
+          pip install pur pytest
           pur -r requirements.txt
           pip install .
-      - name: Lint with flake8
-        run: |
-          flake8 .
       - name: Test with pytest
         run: pytest
