--- a/.github/workflows/test_docs.yml
+++ b/.github/workflows/test_docs.yml
@@ -5,7 +5,7 @@ on:
   push:
   schedule:
     - cron: "0 2 * * *" # run at 2 AM UTC
-    - 
+    -
 
 jobs:
   build-linux:
@@ -21,10 +21,10 @@ jobs:
           python-version: 3.9
       - name: Install dependencies
         run: |
+          pip -r requirements_dev.txt
           pip install .
           sudo apt install pandoc
       - name: Test documentation
         run: |
           cd docs
           make html
-
