--- a/.github/workflows/test_docs.yml
+++ b/.github/workflows/test_docs.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: 3.9
       - name: Install dependencies
         run: |
-          pip -r requirements_dev.txt
+          pip install -r requirements_dev.txt
           pip install .
           sudo apt install pandoc
       - name: Test documentation
