--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 sky130/libs
+extra/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
