--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,10 @@
 include requirements.txt
 include README.md
 include LICENSE
+recursive-include sky130/gds *.gds
+global-include *.lyp
+global-include *.lym
+global-include *.lyt
+include requirements.txt
+include requirements_dev.txt
+include sky130/gds/*.gds
