--- a/.github/workflows/test_code_updated_requirements.yml
+++ b/.github/workflows/test_code_updated_requirements.yml
@@ -33,3 +33,15 @@ jobs:
           pip install .
       - name: Test with pytest
         run: pytest
+  automerge:
+    needs: build
+    runs-on: ubuntu-latest
+
+    permissions:
+      pull-requests: write
+      contents: write
+
+    steps:
+      - uses: fastify/github-action-merge-dependabot@v3.0.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
