--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,9 +2,11 @@ include requirements.txt
 include README.md
 include LICENSE
 recursive-include sky130/gds *.gds
+recursive-include sky130/spice *.spice
 global-include *.lyp
 global-include *.lym
 global-include *.lyt
+global-include *.spice
 include requirements.txt
 include requirements_dev.txt
 include sky130/gds/*.gds
