--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,12 +1,19 @@
 include requirements.txt
 include README.md
 include LICENSE
+include sky130/klayout/sky130/sky130.xs
+include sky130/klayout/sky130/sky130.lyp
+include sky130/klayout/sky130/sky130_xs.lyp
+include sky130/klayout/sky130/sky130hd.lyt
+include sky130/klayout/sky130/tech.lyt
+include sky130/klayout/sky130/layers.lyp
 recursive-include sky130/gds *.gds
 recursive-include sky130/spice *.spice
 global-include *.lyp
 global-include *.lym
 global-include *.lyt
 global-include *.spice
+global-include *.xs
 include requirements.txt
 include requirements_dev.txt
 include sky130/gds/*.gds
