--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 max-line-length = 88
 max-complexity = 38
 select = B,C,E,F,W,T4,B9
-ignore = E501, E503, E722, W503, W503, E203
+ignore = E501, E503, E722, W503, W503, E203, B950
 
 extend-ignore =
     RST303
