--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,21 +1,26 @@
+autodoc_pydantic
+autotyping
 doc8
-docutils
+docutils==0.17.1
 flake8
-furo
+flake8-bugbear
 ipykernel
 mypy
 myst-parser
 nbsphinx
-nbval
 pre-commit
 pur
 pydocstyle
+pytest
 pytest-cov
-recommonmark
-sphinx>=4.4.0
+pytest-regressions
+qrcode
 sphinx-autodoc-typehints
+sphinx-book-theme==0.3.3
 sphinx-click
-sphinx-markdown-tables
+sphinx-copybutton
+sphinx-markdown-tables==0.0.16
 tox
+types-PyYAML
+types-waitress
 xdoctest
-gdsfactory[full]
