--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -5,8 +5,6 @@ name: Lint and Test
 on:
   pull_request:
   push:
-  schedule:
-    - cron: 0 2 * * * # run at 2 AM UTC
 
 jobs:
   build:
@@ -14,8 +12,8 @@ jobs:
     strategy:
       max-parallel: 12
       matrix:
-        python-version: [3.7, 3.8, 3.9]
-        os: [ubuntu-latest, windows-latest]
+        python-version: [3.7, 3.10]
+        os: [ubuntu-latest]
 
     steps:
       - name: Cancel Workflow Action
