--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       max-parallel: 12
       matrix:
-        python-version: [3.7, 3.10]
+        python-version: [3.7, '3.10']
         os: [ubuntu-latest]
 
     steps:
