--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -10,3 +10,5 @@ tag = True
 [bumpversion:file:./README.md]
 
 [bumpversion:file:sky130/__init__.py]
+
+[bumpversion:file:sky130/klayout/sky130/pymacros/set_menus.lym]
