--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
+          pip install flake8 pytest pytest_regressions
           pip install .
       - name: Lint with flake8
         run: |
