--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,7 +3,7 @@ current_version = 0.2.2
 commit = True
 tag = True
 
-[bumpversion:file:./setup.py]
+[bumpversion:file:pyproject.toml]
 
 [bumpversion:file:./docs/conf.py]
 
