--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,12 +12,12 @@ repos:
     hooks:
       - id: unimport
         args: [--remove, --include-star-import]
-  - repo: https://github.com/pycqa/isort
-    rev: 12cc5fbd67eebf92eb2213b03c07b138ae1fb448
-    hooks:
-      - id: isort
-        files: sky130/.*
-        args: [--profile, black, --filter-files]
+  # - repo: https://github.com/pycqa/isort
+  #   rev: 12cc5fbd67eebf92eb2213b03c07b138ae1fb448
+  #   hooks:
+  #     - id: isort
+  #       files: sky130/.*
+  #       args: [--profile, black, --filter-files]
 
   - repo: https://github.com/psf/black
     rev: d4a85643a465f5fae2113d07d22d021d4af4795a
@@ -33,21 +33,21 @@ repos:
     hooks:
       - id: blacken-docs
         additional_dependencies: [black==22.3.0]
-  - repo: https://github.com/pycqa/flake8
-    rev: 647996c743f9e77368ce46cc74abe98549dd4c3a
-    hooks:
-      - id: flake8
+  # - repo: https://github.com/pycqa/flake8
+  #   rev: 647996c743f9e77368ce46cc74abe98549dd4c3a
+  #   hooks:
+  #     - id: flake8
   - repo: https://github.com/kynan/nbstripout
     rev: 4e0f64cf03b52e2aa54f7dd57c722e1a04a439f6
     hooks:
       - id: nbstripout
         files: .ipynb
 
-  - repo: https://github.com/asottile/pyupgrade
-    rev: 4c7ee5abff7f53f8be0bacb0974c63cbd413bae6
-    hooks:
-      - id: pyupgrade
-        args: [--py37-plus, --keep-runtime-typing]
+  # - repo: https://github.com/asottile/pyupgrade
+  #   rev: 4c7ee5abff7f53f8be0bacb0974c63cbd413bae6
+  #   hooks:
+  #     - id: pyupgrade
+  #       args: [--py37-plus, --keep-runtime-typing]
 
   - repo: https://github.com/codespell-project/codespell
     rev: 6a9d7a7a7d0db950a1bd8d5ecdd3298f114d2a12
@@ -115,3 +115,18 @@ repos:
   #   rev: 2b2f0c74acdb3de316e23ceb7dd0d7945c354050
   #   hooks:
   #     - id: reorder-python-imports
+  - repo: https://github.com/nbQA-dev/nbQA
+    rev: 220dacf44e6cc234b8ef87863a31ff9d46dad920
+    hooks:
+      - id: nbqa-black
+        additional_dependencies: [jupytext, black] # optional, only if you're using Jupytext
+      - id: nbqa-pyupgrade
+        args: ["--py37-plus"]
+      # - id: nbqa-flake8
+      # - id: nbqa-isort
+      #   args: ["--float-to-top"]
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: "v0.0.221"
+    hooks:
+      - id: ruff
+        args: ["--force-exclude"]
