--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           sudo apt install pandoc
-          pip install -e .[docs]
+          pip install -e .[docs,dev]
           conda list > requirements.txt
       - uses: actions/upload-artifact@v3
         with:
