add klayout package

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -12,3 +12,5 @@ tag = True
 [bumpversion:file:sky130/__init__.py]
 
 [bumpversion:file:sky130/klayout/sky130/pymacros/set_menus.lym]
+
+[bumpversion:file:sky130/klayout/grain.xml]
