--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -13,4 +13,4 @@ tag = True
 
 [bumpversion:file:sky130/klayout/sky130/pymacros/set_menus.lym]
 
-[bumpversion:file:sky130/klayout/grain.xml]
+[bumpversion:file:sky130/klayout/sky130/grain.xml]
