--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -11,6 +11,6 @@ tag = True
 
 [bumpversion:file:sky130/__init__.py]
 
-[bumpversion:file:sky130/klayout/sky130/pymacros/set_menus.lym]
+[bumpversion:file:sky130/klayout/pymacros/set_menus.lym]
 
-[bumpversion:file:sky130/klayout/sky130/grain.xml]
+[bumpversion:file:sky130/klayout/grain.xml]
