--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -102,5 +102,4 @@ jobs:
         run: |
           mkdir -p $HOME/.tidy3d
           echo ${{ secrets.TIDY3D_AUTH }} > $HOME/.tidy3d/auth.json
-          cd docs
-          make html
+          make docs
