--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,52 +1,44 @@
 # https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
+
 [build-system]
-requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
+requires = ["flit_core >=3.2,<4"]
 
 [project]
-name="sky130"
-description="skywater130 pdk"
-classifiers = [
-    "License :: OSI Approved :: MIT License",
-	"Programming Language :: Python :: 3.7",
-	"Programming Language :: Python :: 3.8",
-	"Programming Language :: Python :: 3.9",
-	"Programming Language :: Python :: 3.10",
-	"Programming Language :: Python :: 3.11",
-	"Operating System :: OS Independent",
-]
-version="0.7.1"
 authors = [
-    {name = "gdsfactory", email = "contact@gdsfactory.com"},
+  {name = "gdsfactory", email = "contact@gdsfactory.com"}
 ]
+classifiers = [
+  "License :: OSI Approved :: MIT License",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Operating System :: OS Independent"
+]
+dependencies = [
+  "gdsfactory[cad]>=7.1.1,<7.2.0",
+  "PySpice"
+]
+description = "skywater130 pdk"
 keywords = ["python"]
 license = {file = "LICENSE"}
-dependencies = [
-    "gdsfactory==6.115.0",
-    "PySpice"
-]
+name = "sky130"
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.10"
+version = "0.7.1"
 
 [project.optional-dependencies]
 dev = [
-    "gdsfactory[full]==6.115.0",
-    "pytest",
-    "pytest-cov",
-    "pytest_regressions",
-    ]
+  "pytest",
+  "pytest-cov",
+  "pytest_regressions"
+]
 docs = [
-    "gdsfactory[full,docs]",
-    ]
-
-
-[tool.setuptools.packages]
-find = {}
+  "autodoc_pydantic",
+  "jupytext",
+  "jupyter-book==0.15.1"
+]
 
 [tool.black]
-line-length = 88
-target-version = ['py310']
-include = '\.pyi?$'
 exclude = '''  # Specify the files/dirs that should be ignored by the black formatter
 /(
     \.eggs
@@ -62,82 +54,54 @@ exclude = '''  # Specify the files/dirs that should be ignored by the black form
   | dist
 )/
 '''
-
-[tool.pytest.ini_options]
-testpaths = ["sky130", "tests"]
-# addopts = --tb=no
-# addopts = '--tb=short'
-python_files = ["sky130/*.py", "tests/*.py"]
-# python_files = ["tests/*.py"]
-# norecursedirs = ["extra/*.py", 'sky130/simulations/*.py']
-# addopts = '--cov=tests --cov-report html'
-
-[tool.flake8]
-max-line-length = 88
-max-complexity = 57
-select = ["B","C","E","F","W","T4","B9"]
-ignore = [ "E501", "E503", "E722", "W503", "W503", "E203", "B950", "B305", "B018", "B902", "B020", "B905"]
-extend-ignore = "RST303"
-
-exclude = [
-    ".git",
-    "__pycache__",
-    "lib",
-    "docs/source/conf.py",
-    "build",
-    "dist",
-    ".ipynb_checkpoints",
-    ".tox",
-    "extra",
-    "deprecated",
-    ".mypy_cache",
-    "venv",
-    "devsim",
-    ]
-
-[tool.commitizen]
-name = "cz_conventional_commits"
-version = "0.1.0"
-version_files = [
-    "pyproject.toml:version",
-]
+include = '\.pyi?$'
+line-length = 88
+target-version = ['py310']
 
 [tool.mypy]
 python_version = "3.10"
 strict = true
+
+[tool.pydocstyle]
+add-ignore = ["D100", "D101", "D102", "D103", "D104", "D203", "D405", "D417"]
+convention = "google"
+inherit = false
+match = "(?!test).*\\.py"
 
 [tool.pylsp-mypy]
 enabled = true
 live_mode = true
 strict = true
 
-[tool.isort]
-multi_line_output = 3
-line_length = 88
-include_trailing_comma = true
+[tool.pytest.ini_options]
+# addopts = --tb=no
+# addopts = '--tb=short'
+python_files = ["sky130/*.py", "tests/*.py"]
+testpaths = ["sky130", "tests"]
+
+[tool.ruff]
+ignore = [
+  "E501",  # line too long, handled by black
+  "B008",  # do not perform function calls in argument defaults
+  "C901",  # too complex
+  "B905",  # `zip()` without an explicit `strict=` parameter
+  "C408"  # C408 Unnecessary `dict` call (rewrite as a literal)
+]
+select = [
+  "E",  # pycodestyle errors
+  "W",  # pycodestyle warnings
+  "F",  # pyflakes
+  "I",  # isort
+  "C",  # flake8-comprehensions
+  "B",  # flake8-bugbear
+  "UP"
+]
+
+[tool.ruff.per-file-ignores]
+"docs/notebooks/intro.py" = ['B018']
 
 [tool.setuptools.package-data]
 mypkg = ["*.csv", "*.yaml"]
 
-[tool.pydocstyle]
-inherit = false
-match = "(?!test).*\\.py"
-add-ignore = ["D100","D101","D102","D103","D104","D203","D405","D417"]
-convention = "google"
-
-[tool.ruff]
-select = [
-    "E",  # pycodestyle errors
-    "W",  # pycodestyle warnings
-    "F",  # pyflakes
-    # "I",  # isort
-    "C",  # flake8-comprehensions
-    "B",  # flake8-bugbear
-]
-ignore = [
-    "E501",  # line too long, handled by black
-    "B008",  # do not perform function calls in argument defaults
-    "C901",  # too complex
-    "B905",  # `zip()` without an explicit `strict=` parameter
-    "C408",  # C408 Unnecessary `dict` call (rewrite as a literal)
-]
+[tool.setuptools.packages]
+find = {}
