--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -11,21 +11,25 @@ jobs:
     runs-on: ubuntu-latest
     name: Sphinx docs to gh-pages
     steps:
+      - name: Cancel Workflow Action
+        uses: styfle/cancel-workflow-action@0.11.0
       - uses: actions/checkout@v3
-      - name: Add conda to system path
-        run: |
-          echo $CONDA/bin >> $GITHUB_PATH
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gdsfactory/
+          key: 0.0.1
+          restore-keys: 0.0.1
       - name: Installing the library
         env:
-          DOCS: True
-          GDSFACTORY_LAYOUT_PLOTTER: klayout
+          GDSFACTORY_DISPLAY_TYPE: klayout
+          KFACTORY_DISPLAY_TYPE: image
         shell: bash -l {0}
         run: |
-          sudo apt install libglu1-mesa
-          make plugins
+          make dev
           make docs
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v2
         with:
           path: "./docs/_build/html/"
 
