--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
   "Operating System :: OS Independent"
 ]
 dependencies = [
-  "gdsfactory[cad]==7.3.0",
+  "gdsfactory[cad]>7.3.0",
   "PySpice"
 ]
 description = "skywater130 pdk"
