--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ version = "0.8.0"
 dev = [
   "pytest",
   "pytest-cov",
-  "pytest_regressions"
+  "pytest_regressions",
+  "pre-commit"
 ]
 docs = [
   "jupytext",
@@ -79,6 +80,7 @@ python_files = ["sky130/*.py", "tests/*.py"]
 testpaths = ["sky130", "tests"]
 
 [tool.ruff]
+fix = true
 ignore = [
   "E501",  # line too long, handled by black
   "B008",  # do not perform function calls in argument defaults
