--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
   "Operating System :: OS Independent"
 ]
 dependencies = [
-  "gdsfactory[cad]==7.8.17",
+  "gdsfactory==7.15.1",
   "PySpice"
 ]
 description = "skywater130 pdk"
