--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -27,6 +27,8 @@ jobs:
     container: ghcr.io/gdsfactory/gdsfactory:main
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: "recursive"
       - name: Install dependencies
         run: |
           make install
