--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,7 @@ classifiers = [
   "Operating System :: OS Independent"
 ]
 dependencies = [
-  "gdsfactory~=7.26.1",
-  "PySpice"
+  "gdsfactory>=7.26.0,<8"
 ]
 description = "skywater130 pdk"
 keywords = ["python"]
