--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,11 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Operating System :: OS Independent"
 ]
 dependencies = [
-  "gdsfactory~=7.26.1",
+  "gdsfactory~=8.3.1",
   "PySpice"
 ]
 description = "skywater130 pdk"
