--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,7 @@ select = [
 "docs/notebooks/intro.py" = ['B018']
 
 [tool.setuptools.package-data]
-mypkg = ["*.csv", "*.yaml"]
+mypkg = ["*.gds"]
 
 [tool.setuptools.packages]
 find = {}
