--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -10,27 +10,25 @@ jobs:
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-          cache: "pip"
-          cache-dependency-path: pyproject.toml
-      - name: Test pre-commit hooks
-        run: |
-          python -m pip install --upgrade pip
-          pip install pre-commit
-          pre-commit run -a
-  test_code:
-    runs-on: ubuntu-latest
-    container: ghcr.io/gdsfactory/gdsfactory:main
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+    - uses: pre-commit/action@v3.0.1
+
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      max-parallel: 12
+      matrix:
+        python-version: ["3.11", "3.12", "3.13"]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - name: Install dependencies
-        run: |
-          make install
-      - name: Test with pytest
-        run: pytest tests/
+      - uses: astral-sh/setup-uv@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Dependencies
+        run: uv sync --all-extras
+      - name: Run Tests
+        run: make test
