--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,10 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
   "Operating System :: OS Independent"
 ]
-dependencies = ["gdsfactory>=9.2.1", "PySpice"]
+dependencies = [
+    "gdsfactory>=9.5.10",
+    "PySpice"
+    ]
 description = "skywater130 pdk"
 keywords = ["python"]
 license = {file = "LICENSE"}
