--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
   "Operating System :: OS Independent"
 ]
 dependencies = [
-  "gdsfactory>=9.5.10",
+  "gdsfactory~=9.8.0",
   "PySpice"
 ]
 description = "skywater130 pdk"
