--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ select = [
 
 [tool.ruff.per-file-ignores]
 "docs/notebooks/intro.py" = ['B018']
+"sky130/pcells/__init__.py" = ["F403"]
 
 [tool.setuptools.package-data]
 mypkg = ["*.gds"]
