--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,8 +9,8 @@ logo: logo.png
 # See https://jupyterbook.org/content/execute.html
 execute:
   execute_notebooks: cache
-  timeout: -1
-  allow_errors: true
+  timeout: 600
+  allow_errors: false
   # timeout: -1
   # execute_notebooks: force
   # execute_notebooks: "off"
