--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,10 +1,8 @@
-name: Release Drafter and Labels
+name: Release Drafter
 on:
   push:
     branches:
       - main
-  pull_request:
-    types: [edited, opened, reopened, synchronize, unlabeled, labeled]
 permissions:
   contents: read
 jobs:
@@ -18,17 +16,3 @@ jobs:
       - uses: release-drafter/release-drafter@v6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  require_label:
-    if: github.event.pull_request
-    needs: update_release_draft
-    runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
-    steps:
-      - uses: mheap/github-action-required-labels@v5
-        with:
-          mode: minimum
-          count: 1
-          labels: "breaking, bug, github_actions, documentation, dependencies, enhancement, feature, maintenance, security"
-          add_comment: true
