updates for doroutes
Signed-off-by: Kevin Guan <kevinwguan@protonmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,10 @@ classifiers = [
   "Operating System :: OS Independent"
 ]
 dependencies = [
+  "doroutes>=0.3.0",
   "gdsfactory~=9.20.7",
-  "PySpice"
+  "PySpice",
+  "python-dotenv>=1.2.1",
 ]
 description = "skywater130 pdk"
 keywords = ["python"]
