--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       max-parallel: 12
       matrix:
-        python-version: ["3.12"]
+        python-version: ["3.12", "3.13", "3.14"]
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v6
